--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
 /********************* COMMON **********************/
+body {
+	background-color: #222;
+	color: white;
+	font-family: sans-serif;
+}
+
+.deb {
+	border: 2px dashed red;
+}
+
+.little-container {
+	width: 800px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.square {
+	width: 80px;
+	height: 80px;
+}
