--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,20 @@ body {
 	font-family: sans-serif;
 }
 
-.little-container {
+/* CONTAINERS */
+.easy-container {
 	width: 800px;
 	margin: 0 auto;
-	display: hidden;
+}
+
+.medium-container {
+	width: 720px;
+	margin: 0 auto;
+}
+
+.hard-container {
+	width: 560px;
+	margin: 0 auto;
 }
 
 .square {
@@ -31,5 +41,9 @@ body {
 }
 
 #btn {
+	margin: 0 auto;
+}
+
+.select-input {
 	margin: 0 auto;
 }
